--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.2"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.8.2",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
